tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_GetInvokerExpression_Null.bsl

EVIL_PROVIDER_GetInvokerExpression_Null.fsx(7,9,7,76): typecheck error FS3056: Type provider 'Provider.EvilProviderWhereApplyGetInvokerExpressionReturnsNull' returned null from GetInvokerExpression.
